# bert-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
bert/: Cargo.toml
bert/src/: deserializers.rs  enum_macro.rs  errors.rs  forward.rs  lib.rs  serializers.rs  types.rs  utils.rs  wrappers.rs
bert_tests/: Cargo.toml  build.rs
bert_tests/tests/: test.rs  test.rs.in  test_deserializers.rs  test_serializers.rs
src/: deserializers.rs  enum_macro.rs  errors.rs  lib.rs  mapping.rs  serializers.rs  types.rs  utils.rs  wrappers.rs
tests/: test_deserializers.rs  test_serializers.rs
