[package]
name = "bert"
version = "0.2.0"
authors = ["Valeryi Savich <Relrin78@gmail.com>"]
description = "BERT (Binary ERlang Term) serializer"
repository = "https://github.com/Relrin/bert-rs"
readme = "README.md"
keywords = ["serialization", "erlang", "bert", "term_to_binary"]
license = "BSD-3-Clause"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
num = "0.4"
byteorder = "1.5"
