[package]
name = "bert_tests"
version = "0.1.0"
authors = ["Valeryi Savich <Relrin78@gmail.com>"]
build = "build.rs"

[features]
default = ["with-syntex"]
with-syntex = ["syntex", "serde_codegen"]

[build-dependencies]
syntex = { version = "*", optional = true }
serde_codegen = { version = "0.8.0", optional = true }

[dependencies]
bert = { path = "../bert" }
serde = "0.8.6"
serde_macros = { version = "0.8.0", optional = true }
num = "0.1.34"

[[test]]
name = "test"
path = "tests/test.rs"
